# cockoo-bell

./: .gitignore  CMakeLists.txt  Cockoo.rc  Cuckoo-clock.cpp  Cuckoo-clock.sln  Cuckoo-clock.vcxproj  Cuckoo-clock.vcxproj.filters  Cuckoo.cpp  INSTALL.bat  LICENCE  README.md  UNINSTALL.bat  resource.h
